[package]
name = "methylcx"
version = "0.1.0"
authors = ["Welliton de Souza"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.36.0"
clap = "3.0.0-beta.2"
flate2 = "1.0.19"
bio = "0.32.0"